--- a/style.css
+++ b/style.css
@@ -312,6 +312,11 @@ footer p{
       padding-right: 5px;
       
     }
+     label.logo{
+        font-size: 20px;
+        padding-left: 30px;
+        line-height: 80px;
+    }
     img {
       width: 100%;
     }
@@ -368,7 +373,7 @@ footer p{
   }
   @media (max-width:952px) {
     label.logo{
-        font-size: 25px;
+        font-size: 20px;
         padding-left: 30px;
         line-height: 80px;
     }
